[tool.poetry]
name = "inv-little-helper"
version = "0.1.0"
description = ""
authors = ["Juan Prida pridaj.9@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.2"
plotly = "^5.24.0"
streamlit = "^1.38.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
